# pico-projects

blank/: .gitignore  CMakeLists.txt  build.bat  main.c  main.cpp
lpad/: CMakeLists.txt  main.cpp  random.cpp  random.h  rgb_keypad.cpp  rgb_keypad.h  types.h  utility.cpp  utility.h
usb/: CMakeLists.txt
